<resources>
    <string name="app_name" translatable="false">Daily Bites</string>
    <string name="notifi_token" translatable="false">AAAA6NM39YA:APA91bHd7UWFVwNri7HBiDc0ZA5rXPBpUFyWL1gcxl4OL6-PGanVBK_4GenmtreQd4lp0ohOXpEtUebBPhBF719epS5-H2udlVaC8GZuURtkhOJX3MAxDBR9rpcSzzOPKte32ONKKJjT</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pref_previously_started" translatable="false">false</string>
    <string name="update_today_s_menu">Update today\'s Menu</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="rate_of_a_day">Rate of one day plan</string>
    <string name="add_menu">Add Menu....</string>
    <string name="mess_owner">Mess owner</string>
    <string name="mess_consumer">Mess Consumer</string>
    <string name="or">OR</string>
    <string name="mess_name">Mess Name</string>
    <string name="options">Options</string>
    <string name="with_delivery">Get delivery to home</string>
    <string name="without_delivery">Takeaway  or eat on spot</string>
    <string name="check_the_mess_location_here">Check the Mess location here</string>
    <string name="one_time_pass">One Time Pass</string>
    <string name="daily_menu">Daily Menu</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="consumers">Consumers</string>
    <string name="wallet">Wallet</string>
    <string name="send_message">Send Message</string>
    <string name="one_day_users">One Day Users</string>
    <string name="show_mess_qr">Show mess QR</string>
    <string name="edit_n_silver_nplan" translatable="false">edit\n Silver \nPlan</string>
    <string name="edit_ngold_nplan" translatable="false">edit\nGold\nPlan</string>
    <string name="edit_ndimond_nplan" translatable="false">edit\nDiamond\nPlan</string>
    <string name="total_subscribers">Total Subscribers</string>
    <string name="user_ratings">User Ratings</string>
    <string name="select_your_location">Select your location</string>
    <string name="your_address">Your Address</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="monthly_plans"><![CDATA[Monthly Plans]]></string>
    <string name="contact_info"><![CDATA[Contact Info  ->]]></string>
    <string name="location"><![CDATA[Location  ->]]></string>
    <string name="show_path_in_map">Show Path in Map</string>
    <string name="login">Login</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="mess">Mess</string>
    <string name="owner_name">Owner Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to">I agree to <font fgcolor="#FDD500">Term of Service</font></string>
    <string name="rate_of_plan">Rate  of  plan</string>
    <string name="non_veg_include">Non-veg  include</string>
    <string name="breakfast_include">BreakFast  include</string>
    <string name="home_delivery">Home  delivery</string>
    <string name="add_description">Add  Description....</string>
    <string name="update">Update</string>
    <string name="notification">Notification</string>
    <string name="one_token_remaining_for_this_month">One token remaining for this month</string>
    <string name="use_in_any_partner_food_provider_mess">Use in any partner food provider mess</string>
    <string name="_1_go_on_home_page_look_the_menu_of_one_day_plans_and_choose_any_mess_which_you_like_n_n2_go_there_and_ask_for_qr_code_after_scanning_you_can_enjoy_your_free_meal">1. Go on home page, look the menu of one day plans and choose any mess which you like.  \n\n2. Go there and ask for QR code, after scanning you can enjoy your free meal.</string>
    <string name="scan_qr_to_use">Scan QR to Use</string>
    <string name="offer_details">Offer Details</string>
    <string name="about_us">About Us</string>
    <string name="one_day_user">One Day User</string>
    <string name="plan_includes">Plan Includes</string>
    <string name="plan_description">Plan Description</string>
    <string name="description">Description....</string>
    <string name="subscribe">Subscribe</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="click_below_button_to_updated_your_location">Click below button to updated your location</string>
    <string name="upload_cover_image">Upload Cover Image</string>
    <string name="click_the_yellow_button_to_upload">Click the yellow button to upload</string>
    <string name="aaddhaar_number">Aadhaar Card Number</string>
    <string name="bank_account_number">Bank account number</string>
    <string name="ifsc">IFSC</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holder_name">Account holder name</string>
    <string name="mess_qr_code">Mess QR Code</string>
    <string name="send_messege_to_subscribed_mess_owner">Send Message to Subscribed Mess Owner</string>
    <string name="title">Title</string>
    <string name="messege">Message</string>
    <string name="add_title">Add title....</string>
    <string name="add_messege">Add Message....</string>
    <string name="one_day_plan">One Day Plan</string>
    <string name="scan_the_qr_code_present_on_mess_mobile_before_receiving_the_food">Scan the QR code present on Mess mobile before receiving the food</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="send_messege_to_all_users">Send Message to all users</string>
    <string name="send">Send</string>
    <string name="user">User</string>
    <string name="current_balance">Current Balance</string>
    <string name="withdraw_pending">Withdraw Pending</string>
    <string name="transaction_history">Transaction History</string>
    <string name="pending_balance">Total Pending</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="deposit">Add Balance</string>
    <string name="everyday_menu_will_show_here">Everyday menu will show here</string>
    <string name="p_l_a_n_n_a_m_e">P L A N  N A M E</string>
    <string name="you_have_a_free_token">You have a free Token</string>
    <string name="clam_now"><![CDATA[CLAIM NOW >]]></string>
    <string name="mess_list"><![CDATA[Mess  List ]]></string>
    <string name="oneday_plans"><![CDATA[OneDay  Plans ]]></string>
    <string name="recently_visited">Recently  Visited</string>
    <string name="wishlist">Wishlist</string>
    <string name="personal_information">Personal Information</string>
    <string name="log_out">Log Out</string>
    <string name="enter_password">Enter Password</string>
    <string name="proceed">Proceed</string>
    <string name="give_ratings_to_your_mess">Give Ratings to your mess</string>
    <string name="submit">Submit</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="language">Language</string>
    <string name="about_daily_bites" translatable="false">Welcome to Daily Bites, your go-to mobile app for hassle-free and delicious daily meals. We are on a mission to connect users with local mess owners, providing a convenient and affordable subscription service for lunch and dinner.\n\nOur app is designed with simplicity and convenience in mind. With just a few taps, you can explore a wide range of food options and connect with our trusted food partners who handle the delivery. Say goodbye to the stress of cooking or searching for a good meal – Daily Bites has got you covered.\n\n</string>
    <string name="key_features" translatable="false">1. Easy Ordering: Our user-friendly interface makes it effortless to browse through our diverse menu and select your preferred meals. With just a few taps, you can customize your order to match your tastes and dietary preferences.\n\n2. Trusted Food Partners: We collaborate with licensed and reputable food partners who adhere to food safety and hygiene regulations. This ensures that the meals you receive are prepared with the freshest ingredients and meet high-quality standards.\n\n3. Timely Deliveries: Our dedicated food partners handle the delivery process, ensuring that your meals arrive on time, every time. Simply sit back, relax, and let us take care of your daily bites.\n\n4. Flexible Subscriptions: We offer a variety of subscription plans to suit your needs. You have the freedom to modify or cancel your subscription based on your preferences and schedule.\n\n5. Varied Menu Options: From delicious entrees to wholesome vegetarian or vegan dishes, our menu offers a wide range of options to cater to different palates and dietary needs. Enjoy a variety of meals that are both delicious and nutritious.\n\n6. User-Friendly Experience: Our app is designed to make your experience seamless and enjoyable. We value your feedback and continuously strive to enhance your dining experience based on your suggestions.\n\nJoin the Daily Bites community and experience the convenience of having delicious meals delivered to your doorstep. Download our app today and indulge in the joy of effortless dining.\n\nWe are committed to providing you with a delightful culinary experience while ensuring the highest standards of food safety and quality. If you have any questions or need assistance, our support team is here to help. Happy eating with Daily Bites!\n</string>
    <string name="for_mess_owner" translatable="false">1. Acceptance of Terms By using our app, you acknowledge and agree to the following terms and conditions.\n\n2. Mess owners must create an account to use our app. You must provide accurate and up-to-date information during the registration process.\n\n3. Our app provides a platform to connect mess owners with consumers. You are solely responsible for the quality, safety, and legality of the meals you provide to consumers.\n\n4. Mess owners may set their own prices for meals. The app may facilitate payment transactions between mess owners and consumers. We reserve the right to charge a commission or service fee for each transaction.\n\n5. Consumers may leave reviews and ratings for your mess. You understand and agree that these reviews and ratings may be publicly displayed on our app.\n\n6. We reserve the right to suspend or terminate your account if you violate these terms and conditions. You may also terminate your account at any time by contacting our support team.\n\n7. We are not responsible for any damages, losses, or liabilities arising from the use of our app or any transactions between mess owners and consumers. We do not guarantee the availability or quality of the meals provided by mess owners</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="registrations">Registrations</string>
    <string name="send_feedback">Send feedback</string>
</resources>