<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportOptions">

    <ImageView
        android:id="@+id/planImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bottom_rounded_corners"
        android:clipToOutline="true"
        android:elevation="2dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/back_icon" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/support"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/planImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chatUs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#F8F8FF"
        android:drawableRight="@drawable/expand_right"
        android:drawablePadding="13dp"
        android:paddingHorizontal="13dp"
        android:text="@string/chat_with_us"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planImage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/termAndConditions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#F8F8FF"
        android:drawableRight="@drawable/expand_right"
        android:drawablePadding="13dp"
        android:paddingHorizontal="13dp"
        android:text="@string/terms_of_service"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatUs" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/OpenSourceLibraries"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#F8F8FF"
        android:drawableRight="@drawable/expand_right"
        android:drawablePadding="13dp"
        android:paddingHorizontal="13dp"
        android:text="Open Source Libraries"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termAndConditions" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrations"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#F8F8FF"
        android:drawableRight="@drawable/expand_right"
        android:drawablePadding="13dp"
        android:paddingHorizontal="13dp"
        android:text="@string/registrations"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OpenSourceLibraries" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendFeedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#F8F8FF"
        android:drawableRight="@drawable/expand_right"
        android:drawablePadding="13dp"
        android:paddingHorizontal="13dp"
        android:text="@string/send_feedback"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrations" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#F8F8FF"
        android:drawableRight="@drawable/expand_right"
        android:drawablePadding="13dp"
        android:paddingHorizontal="13dp"
        android:text="@string/about_us"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendFeedback" />

</androidx.constraintlayout.widget.ConstraintLayout>