<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mess.SendNotificationToUser">

    <androidx.cardview.widget.CardView
        android:id="@+id/wallet"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="18dp"
        android:elevation="3dp"
        android:backgroundTint="@color/brandcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/wallet_icon" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/notification"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="18dp"
        android:elevation="3dp"
        android:backgroundTint="@color/brandcolor"
        app:layout_constraintBottom_toBottomOf="@+id/wallet"
        app:layout_constraintEnd_toStartOf="@id/wallet"
        app:layout_constraintTop_toTopOf="@+id/wallet">


        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/bell_icon" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="35dp"
        android:backgroundTint="@color/brandcolor"
        app:cardElevation="18dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notification">


        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/system_uicons_wrap_back" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:inputType="number"
        android:text="@string/send_messege_to_all_users"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView20"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:background="@drawable/button_boarder"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/add_title"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView210"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_margin="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView113"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/messege"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:background="@drawable/button_boarder"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/add_messege"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView113" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_shape"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="#191B1A"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView210" />



</androidx.constraintlayout.widget.ConstraintLayout>