<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="6dp"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/system_uicons_wrap_back" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/alegreya_sc_black"
        android:textColor="@color/black"
        android:text="@string/about_us"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/alegreya_sc_black"
            android:text="About Daily Bites App"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/back"
            app:layout_constraintTop_toBottomOf="@+id/about_us" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="25dp"
            android:justificationMode="inter_word"
            android:text="@string/about_daily_bites"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/alegreya_sc_black"
            android:text="Key Features"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/textView36"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="25dp"
            android:justificationMode="inter_word"
            android:text="@string/key_features"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:srcCompat="@drawable/end_points_of_page" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>